CFLM-858: Fixed cropped HT categories drop-down
* CFLM-858: Fixed cropped HT categories drop-down

* CFLM-858: Changed var to const

--- a/owa/app/css/messages.scss
+++ b/owa/app/css/messages.scss
@@ -150,6 +150,11 @@ header .logo img {
             flex-direction: column;
         }
     }
+
+    .multiselect.form-group {
+        position: absolute;
+        width: 100%;
+    }
 }
 
 .disable-element {
